use java 17 for hadoop